--- a/settings/OrgPreference.settings
+++ b/settings/OrgPreference.settings
@@ -34,7 +34,7 @@
     </preferences>
     <preferences>
         <settingName>PathAssistantsEnabled</settingName>
-        <settingValue>false</settingValue>
+        <settingValue>true</settingValue>
     </preferences>
     <preferences>
         <settingName>UsePathCollapsedUserPref</settingName>
