--- a/settings/Security.settings
+++ b/settings/Security.settings
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <SecuritySettings xmlns="http://soap.sforce.com/2006/04/metadata">
-    <networkAccess/>
+    <networkAccess>
+        <ipRanges>
+            <description>James&apos; Home</description>
+            <end>73.60.51.22</end>
+            <start>73.60.51.22</start>
+        </ipRanges>
+    </networkAccess>
     <passwordPolicies>
         <complexity>AlphaNumeric</complexity>
         <expiration>NinetyDays</expiration>
