--- a/settings/Security.settings
+++ b/settings/Security.settings
@@ -48,6 +48,6 @@
         <requireHttpOnly>false</requireHttpOnly>
         <requireHttps>true</requireHttps>
         <securityCentralKillSession>true</securityCentralKillSession>
-        <sessionTimeout>TwoHours</sessionTimeout>
+        <sessionTimeout>EightHours</sessionTimeout>
     </sessionSettings>
 </SecuritySettings>
