--- a/settings/DataDotCom.settings
+++ b/settings/DataDotCom.settings
@@ -4,6 +4,11 @@
     <enableAccountImportButtonOff>false</enableAccountImportButtonOff>
     <enableAllowDupeContactFromLead>false</enableAllowDupeContactFromLead>
     <enableAllowDupeLeadFromContact>false</enableAllowDupeLeadFromContact>
+    <enableCleanUpgradeRequested>false</enableCleanUpgradeRequested>
     <enableContactExportButtonOff>false</enableContactExportButtonOff>
     <enableContactImportButtonOff>false</enableContactImportButtonOff>
+    <enableDDCSocialKeyEnabled>false</enableDDCSocialKeyEnabled>
+    <enableDataDotComCleanEnabled>true</enableDataDotComCleanEnabled>
+    <enableDataDotComOptOutsEnabled>false</enableDataDotComOptOutsEnabled>
+    <enableDatacloudAPIEnabled>true</enableDatacloudAPIEnabled>
 </DataDotComSettings>
