--- a/settings/Analytics.settings
+++ b/settings/Analytics.settings
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<AnalyticsSettings xmlns="http://soap.sforce.com/2006/04/metadata">
+<AnalyticsSettings xmlns="http://soap.sforce.com/2006/04/metadata" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <alwaysGenPreviews>false</alwaysGenPreviews>
     <analyticsAdoptionMetadata>false</analyticsAdoptionMetadata>
     <canAccessAnalyticsViaAPI>false</canAccessAnalyticsViaAPI>
@@ -9,7 +9,6 @@
     <canShareAppsWithCommunities>false</canShareAppsWithCommunities>
     <canSubscribeDashboardWidgets>false</canSubscribeDashboardWidgets>
     <canViewThumbnailAssets>false</canViewThumbnailAssets>
-    <enableAnalyticsSubtotals>false</enableAnalyticsSubtotals>
     <enableAutoCompleteCombo>true</enableAutoCompleteCombo>
     <enableDashboardComponentSnapshot>false</enableDashboardComponentSnapshot>
     <enableDashboardFlexiTable>true</enableDashboardFlexiTable>
@@ -22,8 +21,9 @@
     <enableNewChartsEngine>true</enableNewChartsEngine>
     <enableRemoveFooterForRepDisplay>false</enableRemoveFooterForRepDisplay>
     <enableRemoveFooterFromRepExp>false</enableRemoveFooterFromRepExp>
-    <enableReportFieldToFieldPref>false</enableReportFieldToFieldPref>
-    <enableReportUniqueRowCountPref>false</enableReportUniqueRowCountPref>
+    <enableReportFieldToFieldPref xsi:nil="true"/>
+    <enableReportNotificationsEnable>true</enableReportNotificationsEnable>
+    <enableS1AnalyticsEclairEnable>true</enableS1AnalyticsEclairEnable>
     <enableSFXJoinedReportsEnable>false</enableSFXJoinedReportsEnable>
     <enableUseOldChartsLookAndFeel>false</enableUseOldChartsLookAndFeel>
     <enableWaveReplication>false</enableWaveReplication>
