--- a/settings/Chatter.settings
+++ b/settings/Chatter.settings
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ChatterSettings xmlns="http://soap.sforce.com/2006/04/metadata">
+<ChatterSettings xmlns="http://soap.sforce.com/2006/04/metadata" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <allowChatterGroupArchiving>true</allowChatterGroupArchiving>
     <allowRecordsInChatterGroup>true</allowRecordsInChatterGroup>
+    <allowSharingInChatterGroup xsi:nil="true"/>
+    <enableCaseFeedRelativeTimestamps>true</enableCaseFeedRelativeTimestamps>
     <enableChatter>true</enableChatter>
     <enableChatterEmoticons>false</enableChatterEmoticons>
     <enableFeedEdit>true</enableFeedEdit>
