--- a/settings/OrgPreference.settings
+++ b/settings/OrgPreference.settings
@@ -138,7 +138,7 @@
     </preferences>
     <preferences>
         <settingName>Translation</settingName>
-        <settingValue>false</settingValue>
+        <settingValue>true</settingValue>
     </preferences>
     <preferences>
         <settingName>UpgradeInsecureRequestsPref</settingName>
