--- a/settings/UserManagement.settings
+++ b/settings/UserManagement.settings
@@ -2,6 +2,7 @@
 <UserManagementSettings xmlns="http://soap.sforce.com/2006/04/metadata">
     <enableCanAnswerContainUsername>true</enableCanAnswerContainUsername>
     <enableConcealPersonalInfo>true</enableConcealPersonalInfo>
+    <enableContactlessExternalIdentityUsers>false</enableContactlessExternalIdentityUsers>
     <enableEnhancedPermsetMgmt>false</enableEnhancedPermsetMgmt>
     <enableEnhancedProfileMgmt>true</enableEnhancedProfileMgmt>
     <enableNewProfileUI>false</enableNewProfileUI>
