--- a/settings/Sharing.settings
+++ b/settings/Sharing.settings
@@ -7,6 +7,7 @@
     <enableManualUserRecordSharing>false</enableManualUserRecordSharing>
     <enablePortalUserVisibility>true</enablePortalUserVisibility>
     <enableRemoveTMGroupMembership>false</enableRemoveTMGroupMembership>
+    <enableRestrictAccessLookupRecords>false</enableRestrictAccessLookupRecords>
     <enableSecureGuestAccess>false</enableSecureGuestAccess>
     <enableStandardReportVisibility>true</enableStandardReportVisibility>
 </SharingSettings>
