--- a/settings/Activities.settings
+++ b/settings/Activities.settings
@@ -7,8 +7,10 @@
     <enableDragAndDropScheduling>true</enableDragAndDropScheduling>
     <enableEmailTracking>true</enableEmailTracking>
     <enableGroupTasks>true</enableGroupTasks>
+    <enableHideChildEventsPreference>false</enableHideChildEventsPreference>
     <enableListViewScheduling>true</enableListViewScheduling>
     <enableLogNote>false</enableLogNote>
+    <enableMLSingleClientProfile>false</enableMLSingleClientProfile>
     <enableMultidayEvents>true</enableMultidayEvents>
     <enableRecurringEvents>true</enableRecurringEvents>
     <enableRecurringTasks>true</enableRecurringTasks>
