--- a/settings/Flow.settings
+++ b/settings/Flow.settings
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <FlowSettings xmlns="http://soap.sforce.com/2006/04/metadata">
+    <doesFormulaEnforceDataAccess>false</doesFormulaEnforceDataAccess>
+    <doesFormulaGenerateHtmlOutput>false</doesFormulaGenerateHtmlOutput>
     <enableFlowBREncodedFixEnabled>true</enableFlowBREncodedFixEnabled>
+    <enableFlowCustomPropertyEditor>false</enableFlowCustomPropertyEditor>
     <enableFlowDeployAsActiveEnabled>false</enableFlowDeployAsActiveEnabled>
     <enableFlowFieldFilterEnabled>true</enableFlowFieldFilterEnabled>
     <enableFlowFormulasFixEnabled>false</enableFlowFormulasFixEnabled>
@@ -11,6 +14,7 @@
     <enableInvocableFlowFixEnabled>true</enableInvocableFlowFixEnabled>
     <enableLightningRuntimeEnabled>false</enableLightningRuntimeEnabled>
     <isAccessToInvokedApexRequired>false</isAccessToInvokedApexRequired>
+    <isApexPluginAccessModifierRespected>false</isApexPluginAccessModifierRespected>
     <isEnhancedFlowListViewVisible>true</isEnhancedFlowListViewVisible>
     <isManageFlowRequiredForAutomationCharts>false</isManageFlowRequiredForAutomationCharts>
 </FlowSettings>
