--- a/settings/Language.settings
+++ b/settings/Language.settings
@@ -2,6 +2,7 @@
 <LanguageSettings xmlns="http://soap.sforce.com/2006/04/metadata">
     <enableEndUserLanguages>false</enableEndUserLanguages>
     <enableICULocaleDateFormat>false</enableICULocaleDateFormat>
+    <enableLocalNamesForStdObjects>false</enableLocalNamesForStdObjects>
     <enablePlatformLanguages>false</enablePlatformLanguages>
     <enableTranslationWorkbench>true</enableTranslationWorkbench>
     <useLanguageFallback>false</useLanguageFallback>
